Project

General

Profile

Actions

Bug #36038

closed

[rbd-mirror] don't report error if image replay canceled

Added by Jason Dillaman over 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Low
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the image is migrated to another rbd-mirror instance, the image replay will be canceled. If it's canceled while a sync is in-progress, it will report an error:

2018-09-14 01:32:04.112 7f2ef4ff9700 10 rbd::mirror::ImageReplayer: 0x7f2fc8783ac0 [2/ddd2809f-32b1-4133-a189-db6f82b41a7a] handle_bootstrap: r=-125
2018-09-14 01:32:04.112 7f2fd97d1700 10 rbd::mirror::ImageReplayer: 0x7f2fc8783ac0 [2/ddd2809f-32b1-4133-a189-db6f82b41a7a] shut_down: r=-125
2018-09-14 01:32:04.117 7f2fd97d1700 15 rbd::mirror::ImageReplayer: 0x7f2fc8783ac0 [2/ddd2809f-32b1-4133-a189-db6f82b41a7a] send_mirror_status_update: status=[state=up+error, description=error bootstrapping replay, last_update=0.000000]

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #37909: mimic: [rbd-mirror] don't report error if image replay canceledResolvedAshish SinghActions
Actions #1

Updated by Jason Dillaman over 5 years ago

  • Priority changed from Normal to Low
Actions #2

Updated by Mykola Golub over 5 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #3

Updated by Mykola Golub over 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 25789
Actions #4

Updated by Jason Dillaman over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37909: mimic: [rbd-mirror] don't report error if image replay canceled added
Actions #6

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF