rbd_mirror: don't report error if image replay canceled

Fixes: https://tracker.ceph.com/issues/36038
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 552b7469ded82c4269c8a0e230e8a1f6e6285c6d)